fix font, add avatar, add post

--- a/themes/tranquilpeak/source/_css/base/_base.scss
+++ b/themes/tranquilpeak/source/_css/base/_base.scss
@@ -191,4 +191,8 @@ blockquote {
         }
     }
 }
+
+html, body, p, h1, h2, h3, h4, h5, h6, em, strong, span, a  {
+    font-family: Helvetica,Arial,sans-serif !important;
+}
     
